--- a/index.html
+++ b/index.html
@@ -86,39 +86,40 @@
         </div>
 
         <div id="tm-main" class="uk-section uk-padding-remove-bottom">
-            <div class="uk-container uk-margin-medium-bottom">
-                <div class="uk-flex-between uk-flex-bottom" uk-grid>
-                    <div class="uk-width-1-2@m uk-width-2-5@l">
-                        <div class="uk-position-relative uk-display-inline-block">
-                            <h1 class="uk-margin-remove">Find Your <br>
-                                Tyres
-                            </h1>
-                            <div class="uk-position-bottom-right tm-text-primary tm-text-large">
-                                <div class="uk-flex uk-flex-middle uk-flex-center">
-                                    <img src="images/car.png" alt="" class="uk-margin-small-right">
-                                    <div>search</div>
-                                </div>
 
-                                <div class="tm-margin-bottom tm-grid-divider tm-divider-primary uk-grid-small uk-grid-divider uk-flex-right uk-margin-remove-top"
-                                     uk-grid>
-                                    <div>make</div>
-                                    <div>model</div>
+            <div id="tm-filter-tyres">
+                <div class="uk-container uk-margin-medium-bottom">
+                    <div class="uk-flex-between uk-flex-bottom" uk-grid>
+                        <div class="uk-width-1-2@m uk-width-2-5@l">
+                            <div class="uk-position-relative uk-display-inline-block">
+                                <h1 class="uk-margin-remove">Find Your <br>
+                                    Tyres
+                                </h1>
+                                <div class="uk-position-bottom-right tm-text-primary tm-text-large">
+                                    <div class="uk-flex uk-flex-middle uk-flex-center">
+                                        <img src="images/car.png" alt="" class="uk-margin-small-right">
+                                        <div>search</div>
+                                    </div>
+
+                                    <div class="tm-margin-bottom tm-grid-divider tm-divider-primary uk-grid-small uk-grid-divider uk-flex-right uk-margin-remove-top"
+                                         uk-grid>
+                                        <div>make</div>
+                                        <div>model</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="uk-width-1-2@m">
-                        <div class="uk-text-right@m">
-                            <img src="images/gif-substitute.png" alt="" class="">
+                        <div class="uk-width-1-2@m">
+                            <div class="uk-text-right@m">
+                                <img src="images/width.gif" alt=""  class="step-image" uk-gif>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div id="tm-filter-tyres">
                 <div class="uk-container">
-                    <div class="filter-step" data-step-name="width">
+                    <div class="filter-step" data-step-name="width" data-step-image="images/width.gif">
                         <h2 class="uk-text-center">Select Your Tyre Width</h2>
 
                         <!-- Filter controls -->
@@ -158,7 +159,7 @@
                         </div>
                     </div>
 
-                    <div class="filter-step" data-step-name="height">
+                    <div class="filter-step" data-step-name="height" data-step-image="images/height.gif">
                         <h2 class="uk-text-center">Select Your Tyre Height</h2>
 
                         <!-- Filter controls -->
@@ -198,7 +199,7 @@
                         </div>
                     </div>
 
-                    <div class="filter-step" data-step-name="profile">
+                    <div class="filter-step" data-step-name="profile" data-step-image="images/rim-size.gif">
                         <h2 class="uk-text-center">Select Your Tyre Profile</h2>
 
                         <!-- Filter controls -->
@@ -600,6 +601,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
         <div class="tm-footer uk-section uk-section-xsmall tm-background-secondary uk-light">
